Snaping in solid mode (Xray 1.0) doesnt snap to "occluded" geometry #110259

Closed
opened 2023-07-19 11:03:44 +02:00 by Sergey Bogatchev · 5 comments

System Information
Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 780/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 474.44

Blender Version
Broken: version: 3.6.1, branch: blender-v3.6-release, commit date: 2023-07-17 12:50, hash: 8bda729ef4dc
Worked: 3.5.1
Short description of error
Snaping in solid mode doesn't work well

Exact steps for others to reproduce the error
Add cube. Solid mode with X-ray=1. Some poligons dont see snap.

**System Information** Operating system: Windows-10-10.0.17763-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 780/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 474.44 **Blender Version** Broken: version: 3.6.1, branch: blender-v3.6-release, commit date: 2023-07-17 12:50, hash: `8bda729ef4dc` Worked: 3.5.1 **Short description of error** Snaping in solid mode doesn't work well **Exact steps for others to reproduce the error** Add cube. Solid mode with X-ray=1. Some poligons dont see snap.
Sergey Bogatchev added the
Status
Needs Triage
Type
Report
Priority
Normal
labels 2023-07-19 11:03:45 +02:00

This was an issue in 3.6.0, but should be fixed in 3.6.1

Are you sure this is is using 3.6.1?
@mano-wii : can you repro in 3.6.1?

This was an issue in 3.6.0, but should be fixed in 3.6.1 Are you sure this is is using 3.6.1? @mano-wii : can you repro in 3.6.1?

This was an issue in 3.6.0, but should be fixed in 3.6.1

Are you sure this is is using 3.6.1?
@mano-wii : can you repro in 3.6.1?

yes is reliz 3.6.1 - snap worked good in wireframe, or in solid mode with X-ray=0.5...

> This was an issue in 3.6.0, but should be fixed in 3.6.1 > > Are you sure this is is using 3.6.1? > @mano-wii : can you repro in 3.6.1? yes is reliz 3.6.1 - snap worked good in wireframe, or in solid mode with X-ray=0.5...

Ah, I think I missed the bit of setting XRay to 1.0

image

So yeah, can confirm now.
@mano-wii : mind checking?

Ah, I think I missed the bit of setting XRay to 1.0 ![image](/attachments/d3592c9d-20e5-4567-a484-2732a686b618) So yeah, can confirm now. @mano-wii : mind checking?
Philipp Oeser changed title from Snaping in solid mode doesn't work well to Snaping in solid mode (Xray 1.0) doesnt snap to "occluded" geometry 2023-07-19 14:05:25 +02:00
i'm get from https://download.blender.org/release/Blender3.6/blender-3.6.1-windows-x64.zip

Occlusion of edited meshes is a special case. It never worked properly and needs to be handled differently.

I made a correction and created a PR to be applied in blender 3.6 -> !110263

Occlusion of edited meshes is a special case. It never worked properly and needs to be handled differently. I made a correction and created a PR to be applied in blender 3.6 -> !110263
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-07-19 15:57:28 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#110259
There is no content yet.